--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
+    "start": "node ./build/make.js",
+    "watch": "node ./build/make.js --watch",
     "sass": "node ./build/compileScss.js",
     "sass-watch": "node ./build/compileScss.js --watch"
   },
@@ -19,7 +22,10 @@
   "homepage": "https://github.com/Eonasdan/azure-b2c-html-templates#readme",
   "devDependencies": {
     "@eonasdan/parvus-server": "^1.1.7",
+    "bootstrap": "^5.2.3",
     "chokidar": "^3.5.3",
+    "clean-css": "^5.3.1",
+    "jsdom": "^20.0.3",
     "sass": "^1.56.1"
   }
 }
