--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "^5.2.3",
     "chokidar": "^3.5.3",
     "clean-css": "^5.3.1",
+    "commander": "^9.4.1",
     "jsdom": "^20.0.3",
     "sass": "^1.56.1"
   }
