--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "node ./build/make.js",
     "watch": "node ./build/make.js --watch",
-    "pack": "node ./build/make.js --pack -d https://example.com"
+    "make": "node ./build/make.js --pack -d https://example.com"
   },
   "repository": {
     "type": "git",
